--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb+srv://kakashi:123@cluster0.gegp3hc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://kakashi:123@cluster0.gegp3hc.mongodb.net/photo_sharing_app?retryWrites=true&w=majority&appName=Cluster0
