--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
   }
 }
